--- a/public/privacy.html
+++ b/public/privacy.html
@@ -175,7 +175,7 @@
         <p>We may update this policy. Continued use constitutes acceptance.</p>
         
         <div class="last-updated">
-            <p>Contact: privacy@blink-chat.com</p>
+            <p>Contact: raghavgupta9880@gmail.com</p>
         </div>
     </div>
 
@@ -189,4 +189,5 @@
         });
     </script>
 </body>
+
 </html>
