--- a/public/privacy.html
+++ b/public/privacy.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blink - Privacy Policy</title>
+    <link rel="shortcut icon" type="x-icon" href="icon.png">
     <style>
         :root {
             --primary: #6e45e2;
@@ -189,5 +190,4 @@
         });
     </script>
 </body>
-
 </html>
