--- a/public/report.html
+++ b/public/report.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blink - Report Abuse</title>
+    <link rel="shortcut icon" type="x-icon" href="icon.png">
     <style>
         :root {
             --primary: #6e45e2;
