--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blink - Chat before you think!</title>
+    <title>Randomly - Connect. Chat. Discover.</title>
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -36,8 +36,8 @@
             </style>
 
             <h1 class="logo">
-                <img src="icon.png" alt="Blink" class="logo-icon">
-                <span>Blink</span>
+                <img src="icon.png" alt="Randomly" class="logo-icon">
+                <span>Randomly</span>
             </h1>
 
             <div class="status-indicator">
@@ -103,7 +103,7 @@
         </main>
 
         <footer class="footer">
-            <p>© <span id="year"></span> Blink | 
+            <p>© <span id="year"></span> Randomly | 
                 <a href="privacy.html" id="privacyLink">Privacy Policy</a> | 
                 <a href="#" id="reportLink">Report Abuse</a>
             </p>
@@ -141,4 +141,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
