--- a/public/report.html
+++ b/public/report.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blink - Report Abuse</title>
+    <title>Randomly - Report Abuse</title>
     <link rel="shortcut icon" type="x-icon" href="icon.png">
     <style>
         :root {
@@ -194,7 +194,7 @@
     <div class="container">
         <header>
             <div class="logo">
-                <span>Blink</span>
+                <span>Randomly</span>
             </div>
             <button class="back-btn" onclick="window.history.back()">
                 <i class="fas fa-arrow-left"></i> Back
@@ -247,7 +247,7 @@
         <div id="confirmation" class="confirmation">
             <i class="fas fa-check-circle"></i>
             <h2>Report Submitted</h2>
-            <p>Thank you for helping keep Blink safe. We've received your report and will review it shortly.</p>
+            <p>Thank you for helping keep Randomly safe. We've received your report and will review it shortly.</p>
             <p>Reference ID: <span id="reportId">BLK-XXXXXX</span></p>
             <button class="btn btn-secondary" onclick="window.location.href='index.html'">
                 <i class="fas fa-home"></i> Return Home
