--- a/public/index.html
+++ b/public/index.html
@@ -94,10 +94,10 @@
                         <label for="audioSelect">Microphone:</label>
                         <select id="audioSelect"></select>
                     </div>
-                    <!--<div class="setting-group">
-                        <label for="interestInput">Room Key:</label>
+                    <div class="setting-group">
+                        <label for="interestInput">Room Key : (this feature is not available)</label>
                         <input type="text" id="interestInput" placeholder="e.g. ABCD, 1234, etc.">
-                    </div>-->
+                    </div>
                 </div>
             </div>
         </main>
@@ -141,3 +141,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
